Fixed a broken link in docs.

--- a/doc/src/ts-time/Instant.yaml
+++ b/doc/src/ts-time/Instant.yaml
@@ -148,7 +148,7 @@ symbols:
         returns: '%Instant representation.'
         references:
           parseZoned:
-            file: ZonedDateTime
+            file: ts-time/ZonedDateTime
             member: parse
             static: true
             label: parse
