Removed unnecessary TODOs. Fixed parsing methods to properly parse non-3-length ms. Added LOCAL_ZONE_ID.

--- a/doc/src/ts-time/Zone.yaml
+++ b/doc/src/ts-time/Zone.yaml
@@ -211,3 +211,7 @@ symbols:
   UTC:
     type: '%ZoneOffset'
     description: UTC time zone having a constant 0 offset.
+
+  LOCAL_ZONE_ID:
+    type: '%ZoneId'
+    description: Local browser/system time zone.
