Compile core dist to ES5, because Parcel can't do it for me in tests. Also fixed a regression in Chrome's Intl.DateTimeFormat causing it to write 24:00 instead of 00:00.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "private": true,
   "name": "ts-time-common",
   "devDependencies": {
+    "@babel/cli": "~7.8.4",
+    "@babel/core": "~7.9.0",
+    "@babel/preset-env": "~7.9.5",
     "@types/chai": "~4.2.7",
     "@types/mocha": "~5.2.7",
     "chai": "~4.2.0",
+    "core-js": "~3.6.4",
     "mocha": "~6.2.2",
     "parcel-bundler": "~1.12.4",
     "source-map-support": "~0.5.16",
