--- a/core/main/tsconfig.json
+++ b/core/main/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "dist-tsc",
     "inlineSourceMap": true,
     "inlineSources": true,
     "module": "commonjs",
