--- a/doc/src/index.yaml
+++ b/doc/src/index.yaml
@@ -81,7 +81,7 @@ description: |
     for every class of ts-time there's a specialized implementation of %TemporalFormatter supporting its own set of
     features. The library doesn't support date/time parsing by an arbitrary pattern.</p>
     <h3>Browser support</h3>
-    <p>Microsoft Edge, Google Chrome, Mozilla Firefox: full support.</p>
+    <p>Microsoft Edge, Google Chrome, Mozilla Firefox, NodeJS: full support.</p>
     <p>Internet Explorer 11: all features except local time zones are supported. All local time zones have zero offset.</p>
     <p>Other browsers: not tested.</p>
     <p>Project license is <a href="https://github.com/enepomnyaschih/ts-time/blob/master/LICENSE" target="_blank">MIT</a>.</p>
