--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "private": true,
   "name": "ts-time-common",
   "devDependencies": {
-    "@babel/cli": "~7.8.4",
-    "@babel/core": "~7.9.0",
-    "@babel/preset-env": "~7.9.5",
-    "@types/chai": "~4.2.7",
-    "@types/mocha": "~5.2.7",
-    "chai": "~4.2.0",
-    "core-js": "~3.6.4",
-    "mocha": "~7.1.2",
-    "parcel-bundler": "~1.12.4",
-    "source-map-support": "~0.5.16",
-    "ts-node": "~8.5.4",
+    "@babel/cli": "~7.17.0",
+    "@babel/core": "~7.17.2",
+    "@babel/preset-env": "~7.16.11",
+    "@types/chai": "~4.3.0",
+    "@types/mocha": "~9.1.0",
+    "chai": "~4.3.6",
+    "core-js": "~3.21.0",
+    "mocha": "~9.2.0",
+    "parcel": "~2.3.1",
+    "source-map-support": "~0.5.21",
+    "ts-node": "~10.5.0",
     "ts-time": "file:core/main/dist",
     "ts-time-format": "file:format/main/dist",
-    "typescript": "~3.8.3",
+    "typescript": "~4.5.5",
     "yaml-doc": "~0.1.0",
     "yaml-doc-bootstrap": "~0.1.1"
   }
