--- a/doc/project.yaml
+++ b/doc/project.yaml
@@ -1,6 +1,6 @@
 # MIT License
 #
-# Copyright (c) 2019 Egor Nepomnyaschih
+# Copyright (c) 2019-2022 Egor Nepomnyaschih
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -165,6 +165,37 @@ references:
     file: ts-time-format/TemporalFormatter
     symbol: TemporalFormatComponent
 
+  Error:
+    href: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error
+
+  TemporalError:
+    file: ts-time/errors
+    symbol: TemporalError
+
+  TemporalParsingError:
+    file: ts-time/errors
+    symbol: TemporalParsingError
+
+  InvalidTemporalFormatError:
+    file: ts-time/errors
+    symbol: InvalidTemporalFormatError
+
+  InvalidTimeZoneError:
+    file: ts-time/errors
+    symbol: InvalidTimeZoneError
+
+  MismatchingOffsetError:
+    file: ts-time/errors
+    symbol: MismatchingOffsetError
+
+  InvalidDayOfWeekError:
+    file: ts-time/errors
+    symbol: InvalidDayOfWeekError
+
+  InvalidMonthError:
+    file: ts-time/errors
+    symbol: InvalidMonthError
+
 includes:
   null: |
     <p class="text-secondary">Note that a method call on null or undefined always leads to an error.
@@ -188,6 +219,7 @@ includes:
             <li>%DayOfWeek</li>
             <li>%Duration</li>
             <li>%Era</li>
+            <li>%errors</li>
             <li>%Instant</li>
             <li>%LocalDate</li>
             <li>%LocalDateTime</li>
