--- a/doc/src/ts-time/DayOfWeek.yaml
+++ b/doc/src/ts-time/DayOfWeek.yaml
@@ -1,6 +1,6 @@
 # MIT License
 #
-# Copyright (c) 2019 Egor Nepomnyaschih
+# Copyright (c) 2019-2022 Egor Nepomnyaschih
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -77,7 +77,7 @@ symbols:
     staticMethods:
       of:
         signature: |
-          (value: number | %DayOfWeek): %DayOfWeek
+          (value: number | %DayOfWeek): %DayOfWeek throws %InvalidDayOfWeekError
         params:
           value: Numeric value of the day.
         returns: '%DayOfWeek representation of the day.'
