--- a/doc/src/ts-time/LocalDateTime.yaml
+++ b/doc/src/ts-time/LocalDateTime.yaml
@@ -1,6 +1,6 @@
 # MIT License
 #
-# Copyright (c) 2019 Egor Nepomnyaschih
+# Copyright (c) 2019-2022 Egor Nepomnyaschih
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -392,7 +392,7 @@ symbols:
 
       parse:
         signature: |
-          (str: string): %LocalDateTime
+          (str: string): %LocalDateTime throws %TemporalParsingError
         params:
           str: String representation of a local date/time in ISO format, such as '2019-12-30T18:30:15.225'.
         returns: '%LocalDateTime representation.'
