--- a/doc/src/ts-time/LocalTime.yaml
+++ b/doc/src/ts-time/LocalTime.yaml
@@ -1,6 +1,6 @@
 # MIT License
 #
-# Copyright (c) 2019 Egor Nepomnyaschih
+# Copyright (c) 2019-2022 Egor Nepomnyaschih
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -207,7 +207,7 @@ symbols:
 
       parse:
         signature: |
-          (str: string): %LocalTime
+          (str: string): %LocalTime throws %TemporalParsingError
         params:
           str: String representation of a local time in ISO format, such as '18:30:15.225'.
         returns: '%LocalTime representation.'
