--- a/doc/src/ts-time/Month.yaml
+++ b/doc/src/ts-time/Month.yaml
@@ -1,6 +1,6 @@
 # MIT License
 #
-# Copyright (c) 2019 Egor Nepomnyaschih
+# Copyright (c) 2019-2022 Egor Nepomnyaschih
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -89,7 +89,7 @@ symbols:
     staticMethods:
       of:
         signature: |
-          (value: number | %Month): %Month
+          (value: number | %Month): %Month throws %InvalidMonthError
         params:
           value: Numeric value of the month.
         returns: '%Month representation of the month.'
